--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </main>
     <footer>
       <div class="social-network">
-        <div class="social-netwok-icon-area">
+        <div class="social-network-icon-area">
           <img
             src="img/social-network/Group 33.svg"
             alt=""
